--- a/package.json
+++ b/package.json
@@ -1,26 +1,38 @@
 {
-  "name": "booking",
+  "name": "Booking",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "tailwind": "npx tailwindcss -i ./src/tailwind.css -o ./public/style.css --watch",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@material-tailwind/react": "^2.1.9",
+    "autoprefixer": "^10.4.18",
+    "axios": "^1.6.7",
+    "flowbite-react": "^0.7.2",
+    "postcss": "^8.4.35",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.0.1",
+    "react-lazy-load": "^4.0.1",
+    "react-router": "^6.22.3",
+    "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
-    "@types/react": "^18.2.56",
+    "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
-    "@vitejs/plugin-react-swc": "^3.5.0",
+    "@types/react-router-dom": "^5.3.3",
+    "@vitejs/plugin-react": "^4.2.1",
     "eslint": "^8.56.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "vite": "^5.1.4"
+    "tailwindcss": "^3.4.1",
+    "vite": "^5.1.0"
   }
 }
