--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "server": "json-server --watch server/db.json -p 5000 ",
     "tailwind": "npx tailwindcss -i ./src/tailwind.css -o ./public/style.css --watch",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
@@ -15,11 +16,13 @@
     "autoprefixer": "^10.4.18",
     "axios": "^1.6.7",
     "flowbite-react": "^0.7.2",
+    "json-server": "^1.0.0-alpha.23",
     "postcss": "^8.4.35",
     "react": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-lazy-load": "^4.0.1",
+    "react-multi-date-picker": "^4.4.1",
     "react-router": "^6.22.3",
     "react-router-dom": "^6.22.3"
   },
