--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-lazy-load": "^4.0.1",
+    "react-leaflet": "^4.2.1",
     "react-multi-date-picker": "^4.4.1",
     "react-router": "^6.22.3",
     "react-router-dom": "^6.22.3"
