--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "json-server": "^1.0.0-alpha.23",
     "postcss": "^8.4.35",
     "react": "^18.2.0",
+    "react-country-flag": "^3.1.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-lazy-load": "^4.0.1",
