--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-leaflet": "^4.2.1",
     "react-multi-date-picker": "^4.4.1",
     "react-router": "^6.22.3",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "react-tooltip": "^5.26.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
